# catastrophic-aes

./: CMakeLists.txt  README.md  main.c  test-vectors  todo.list
catastrophic-aes/: aes.c  aes.h  aes_core.c  aes_core.h  aes_fcrypt.c  aes_fcrypt.h  aes_utils.c  aes_utils.h  core.c  core.h  fcrypt.c  fcrypt.h  fileop.c  fileop.h  stdprojutils.h  utils.c  utils.h
src/: catastrophic_aes.c  catastrophic_aes.h  stdprojutils.c  stdprojutils.h
tests/files/: decrypted  plain
tests/src/: aes_quicktest.h
tests/test-vectors/: vecs1
